<resources>
    <string name="app_name">My To-Do</string>
    <string name="test_ad_application_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_reward_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="type_select_q">Select period</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This Year</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="count_edit">Count edit</string>
    <string name="next">Next</string>
    <string name="completed_to_do">Completed to-do</string>
    <string name="completed">Completed</string>
    <string name="total">Total</string>
    <string name="in_progress">In progress</string>
    <string name="completed_text">Completed</string>
    <string name="ok">Ok</string>
    <string name="delete_q">Do you really want to delete this?</string>
    <string name="days_ago">days ago</string>
    <string name="days_later">days later</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="deadline">Deadline</string>
    <string name="calendar">Calendar</string>
    <string name="month_plan">Month</string>
    <string name="year_plan">Year</string>
    <string name="bucket_list">Bucket list</string>
    <string name="settings">Settings</string>
    <string name="todo_enter">Please enter a to-do.</string>
    <string name="count_least">Count is at least 1</string>
    <string name="date">Date</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="m_continue">Continue</string>
    <string name="settings_other_apps">Developer\'s other apps</string>
    <string name="settings_app_review">Rate this app</string>
    <string name="settings_app_recommend">Recommend this app</string>
    <string name="incomplete_todo">Incomplete to-do</string>
    <string name="back">back</string>
    <string name="main_ad_application_id">ca-app-pub-5743192063444801~1120816224</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-5743192063444801/8320649392</string>
</resources>
