<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/settings"
            android:textSize="22dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/app_recommend_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_app_recommend"
                android:textSize="18dp"
                android:textColor="@color/textColor"
                android:textAlignment="textStart"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:icon="@drawable/ic_navigate_next_black_24dp"
                app:iconTint="@color/textColor"
                app:iconGravity="end"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/app_review_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_app_review"
                android:textSize="18dp"
                android:textColor="@color/textColor"
                android:textAlignment="textStart"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:icon="@drawable/ic_navigate_next_black_24dp"
                app:iconTint="@color/textColor"
                app:iconGravity="end"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/other_apps_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_other_apps"
                android:textSize="18dp"
                android:textColor="@color/textColor"
                android:textAlignment="textStart"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:icon="@drawable/ic_navigate_next_black_24dp"
                app:iconTint="@color/textColor"
                app:iconGravity="end"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>